--- a/mypage_project/hello/templates/about.html
+++ b/mypage_project/hello/templates/about.html
@@ -8,7 +8,7 @@
     <h1>About</h1>
 </head>
 <body>
-    <p>안녕하세요 여기는 글자를 세주는 멋쟁이사자처럼의 워드카운트 페이지입니다. 여기서 글자를 세세요!!</p>
+    <p>안녕하세요 여기는 글자를 세주는 멋쟁이사자처럼의 워드카운트 룰루 페이지입니다. 여기서 글자를 세세요!!</p>
 
     <a href="{%url 'home' %}">HOME으로 돌아가기</a>
 </body>
